Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
         <h1>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
 
-<p>1 Download Zip File above into your downloads folder.
-2  Drag the two files (Installation.command and NewDream.command) onto your desktop.<br>
-3  Double click Installation.command.  This will create a directory in your /user/Documents folder.  You can delete this file after double clicking.
-4  Double click NewDream.command each time you have a new dream you wish to add.  Organization is done automatically</p>
+<p>1 Download Zip File above into your downloads folder.</p>
+
+<p>2  Drag the two files (Installation.command and NewDream.command) onto your desktop.  </p>
+
+<p>3  Double click Installation.command.  This will create a directory in your /user/Documents folder.  You can delete this file after double clicking.</p>
+
+<p>4  Double click NewDream.command each time you have a new dream you wish to add.  Organization is done automatically</p>
 
 <h1>
 <a id="viewing-dreams" class="anchor" href="#viewing-dreams" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Viewing Dreams</h1>
