Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
         <h1>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
 
-<p>1 Download Zip File above into your downloads folder.</p>
-
-<p>2  Drag the two files (Installation.command and NewDream.command) onto your desktop.  </p>
-
-<p>3  Double click Installation.command.  This will create a directory in your /user/Documents folder.  You can delete this file after double clicking.</p>
-
-<p>4  Double click NewDream.command each time you have a new dream you wish to add.  Organization is done automatically</p>
+<ol>
+<li><p>Download Zip File above into your downloads folder.</p></li>
+<li><p>Drag the two files (Installation.command and NewDream.command) onto your desktop.  </p></li>
+<li><p>Double click Installation.command.  This will create a directory in your /user/Documents folder.  You can delete this file after double clicking.</p></li>
+<li><p>Double click NewDream.command each time you have a new dream you wish to add.  Organization is done automatically</p></li>
+</ol>
 
 <h1>
 <a id="viewing-dreams" class="anchor" href="#viewing-dreams" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Viewing Dreams</h1>
